--- a/fimco/fimcosite/templates/brokerage.html
+++ b/fimco/fimcosite/templates/brokerage.html
@@ -15,7 +15,14 @@
                     </div>
                     <p>
                         We offer access to Dar es Salaam Stock Exchange listed securities as a licensed broker/dealer of
-                        securities.
+                        securities. As Licensed Dealing Members (LDM) we offer our clients access to equities listed on the
+                        Dar es salaam Stock Exchange
+                    </p>
+                    <p>
+                        Our approach to offering brokerage services is simple; we invest our expertise and values to create
+                        a platform that will allow clients to access the market transparently, competitively and efficiently.
+                        We give our client an intraday view of trading activities which adds more color and context to the
+                        closing or opening reports.
                     </p>
                     <p>
                         Whilst most intermediaries and market watchers provide a snapshot of activity at the end of the
@@ -31,28 +38,57 @@
 
                 <!-- RIGHT -->
                 <div class="col-md-3">
-                    <!-- SOCIAL ICONS -->
-                    <div class="hidden-xs-down text-center">
-                        <a href="#" class="social-icon social-icon-border social-facebook" data-toggle="tooltip" data-placement="top" title="Facebook">
-                            <i class="icon-facebook"></i>
-                            <i class="icon-facebook"></i>
-                        </a>
-
-                        <a href="#" class="social-icon social-icon-border social-twitter" data-toggle="tooltip" data-placement="top" title="Twitter">
-                            <i class="icon-twitter"></i>
-                            <i class="icon-twitter"></i>
-                        </a>
-
-                        <a href="#" class="social-icon social-icon-border social-gplus" data-toggle="tooltip" data-placement="top" title="Google plus">
-                            <i class="icon-gplus"></i>
-                            <i class="icon-gplus"></i>
-                        </a>
-
-                        <a href="#" class="social-icon social-icon-border social-linkedin" data-toggle="tooltip" data-placement="top" title="Linkedin">
-                            <i class="icon-linkedin"></i>
-                            <i class="icon-linkedin"></i>
-                        </a>
+                    <div class="box-static box-border-top mb-60">
+                        <div class="box-title">
+                            <h4>Our process</h4>
+                        </div>
+                        <ul class="list-unstyled list-icons p-15 pb-0">
+                            <li class="mb-20">
+                                <i class="fa fa-check text-success fs-18"></i>
+                                <span class="block bold fs-18">Register open CSD</span>
+                                <small>Must have a CSD, we will easily get you one.</small>
+                            </li>
+                            <li class="mb-20">
+                                <i class="fa fa-check text-success fs-18"></i>
+                                <span class="block bold fs-18">Initiate transactions</span>
+                                <small>Tell us how much you’re looking to invest and we shall tell you how!</small>
+                            </li>
+                            <li class="mb-20">
+                                <i class="fa fa-check text-success fs-18"></i>
+                                <span class="block bold fs-18">Fund Transfer</span>
+                                <small>Transfer cash to our investment trust account and let us handle the rest</small>
+                            </li>
+                            <li class="mb-20">
+                                <i class="fa fa-check text-success fs-18"></i>
+                                <span class="block bold fs-18">Settlement</span>
+                                <small>Shares credited to CSD and funds settled</small>
+                            </li>
+                        </ul>
+                        <hr />
                     </div>
+{#                    <hr />#}
+                    <!-- SOCIAL ICONS -->
+{#                    <div class="hidden-xs-down text-center">#}
+{#                        <a href="#" class="social-icon social-icon-border social-facebook" data-toggle="tooltip" data-placement="top" title="Facebook">#}
+{#                            <i class="icon-facebook"></i>#}
+{#                            <i class="icon-facebook"></i>#}
+{#                        </a>#}
+{##}
+{#                        <a href="#" class="social-icon social-icon-border social-twitter" data-toggle="tooltip" data-placement="top" title="Twitter">#}
+{#                            <i class="icon-twitter"></i>#}
+{#                            <i class="icon-twitter"></i>#}
+{#                        </a>#}
+{##}
+{#                        <a href="#" class="social-icon social-icon-border social-gplus" data-toggle="tooltip" data-placement="top" title="Google plus">#}
+{#                            <i class="icon-gplus"></i>#}
+{#                            <i class="icon-gplus"></i>#}
+{#                        </a>#}
+{##}
+{#                        <a href="#" class="social-icon social-icon-border social-linkedin" data-toggle="tooltip" data-placement="top" title="Linkedin">#}
+{#                            <i class="icon-linkedin"></i>#}
+{#                            <i class="icon-linkedin"></i>#}
+{#                        </a>#}
+{#                    </div>#}
                 </div>
                 <!-- /RIGHT -->
             </div>
