--- a/fimco/fimcosite/templates/fund.html
+++ b/fimco/fimcosite/templates/fund.html
@@ -14,14 +14,14 @@
                         <h2>Fund Management</h2>
                     </div>
                     <p>
-                        We offer our clients access to different funds that will maximize their returns and manage
-                        risks accordingly.
+                        We offer our clients access to different investment opportunities that attempt to maximize their
+                        returns and manage risks accordingly.
                     </p>
                     <p>
                         Client can choose from standardized fund solutions such as POCHI, or our Dollar Fund to maximize
                         on their returns by pooling funds by FIMCO which then invests diligently in the local markets;
                         or bespoke solutions that cater to our clients Size of investment, liquidity preference,
-                        risk averseness and the yields that the market has to offer.
+                        risk adverseness and the yields that the market has to offer.
                     </p>
                     <p>
                         <a href="{% url 'site' 'contact' %}">Contact us</a> to discuss how we can help you invest your funds profitably.
@@ -31,28 +31,62 @@
 
                 <!-- RIGHT -->
                 <div class="col-md-3">
-                    <!-- SOCIAL ICONS -->
-                    <div class="hidden-xs-down text-center">
-                        <a href="#" class="social-icon social-icon-border social-facebook" data-toggle="tooltip" data-placement="top" title="Facebook">
-                            <i class="icon-facebook"></i>
-                            <i class="icon-facebook"></i>
-                        </a>
-
-                        <a href="#" class="social-icon social-icon-border social-twitter" data-toggle="tooltip" data-placement="top" title="Twitter">
-                            <i class="icon-twitter"></i>
-                            <i class="icon-twitter"></i>
-                        </a>
-
-                        <a href="#" class="social-icon social-icon-border social-gplus" data-toggle="tooltip" data-placement="top" title="Google plus">
-                            <i class="icon-gplus"></i>
-                            <i class="icon-gplus"></i>
-                        </a>
-
-                        <a href="#" class="social-icon social-icon-border social-linkedin" data-toggle="tooltip" data-placement="top" title="Linkedin">
-                            <i class="icon-linkedin"></i>
-                            <i class="icon-linkedin"></i>
-                        </a>
+                    <div class="box-static box-border-top mb-60">
+                        <div class="box-title">
+                            <h4>Our process</h4>
+                        </div>
+                        <ul class="list-unstyled list-icons p-15 pb-0">
+                            <li class="mb-20">
+                                <i class="fa fa-check text-success fs-18"></i>
+                                <span class="block bold fs-18">Registration (Basic KYC)</span>
+                                <small>Fill a form or two so that we know who you really are!</small>
+                            </li>
+                            <li class="mb-20">
+                                <i class="fa fa-check text-success fs-18"></i>
+                                <span class="block bold fs-18">Execute Investment Mandate</span>
+                                <small>Legal protection from any liability; good for us and great for you</small>
+                            </li>
+                            <li class="mb-20">
+                                <i class="fa fa-check text-success fs-18"></i>
+                                <span class="block bold fs-18">Initiate Investment transaction</span>
+                                <small>Tell us how much you’re looking to invest and we shall tell you how!</small>
+                            </li>
+                            <li class="mb-20">
+                                <i class="fa fa-check text-success fs-18"></i>
+                                <span class="block bold fs-18">Fund transfer</span>
+                                <small>Transfer cash to our investment trust account and let us handle the rest</small>
+                            </li>
+                            <li class="mb-20">
+                                <i class="fa fa-check text-success fs-18"></i>
+                                <span class="block bold fs-18">Investment execution</span>
+                                <small>We invest and you receive notification of confirmation.</small>
+                            </li>
+                        </ul>
+                        <hr />
                     </div>
+{#                    <hr />#}
+                    <!-- SOCIAL ICONS -->
+{#                    <div class="hidden-xs-down text-center">#}
+{#                        <a href="#" class="social-icon social-icon-border social-facebook" data-toggle="tooltip" data-placement="top" title="Facebook">#}
+{#                            <i class="icon-facebook"></i>#}
+{#                            <i class="icon-facebook"></i>#}
+{#                        </a>#}
+{##}
+{#                        <a href="#" class="social-icon social-icon-border social-twitter" data-toggle="tooltip" data-placement="top" title="Twitter">#}
+{#                            <i class="icon-twitter"></i>#}
+{#                            <i class="icon-twitter"></i>#}
+{#                        </a>#}
+{##}
+{#                        <a href="#" class="social-icon social-icon-border social-gplus" data-toggle="tooltip" data-placement="top" title="Google plus">#}
+{#                            <i class="icon-gplus"></i>#}
+{#                            <i class="icon-gplus"></i>#}
+{#                        </a>#}
+{##}
+{#                        <a href="#" class="social-icon social-icon-border social-linkedin" data-toggle="tooltip" data-placement="top" title="Linkedin">#}
+{#                            <i class="icon-linkedin"></i>#}
+{#                            <i class="icon-linkedin"></i>#}
+{#                        </a>#}
+{#                    </div>#}
                 </div>
                 <!-- /RIGHT -->
             </div>
