--- a/fimco/fimcosite/templates/index.html
+++ b/fimco/fimcosite/templates/index.html
@@ -560,33 +560,33 @@
 
 
         <!-- INFO BAR -->
-        <section class="info-bar info-bar-clean">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-4">
-                        <a href="{% url 'pochi' %}">
-                            <i class="glyphicon glyphicon-credit-card"></i>
-                            <h3>POCHI </h3>
-                            <p>Smart investment <b>wallet</b></p>
-                        </a>
-                    </div>
-                    <div class="col-sm-4">
-                        <a href="{% url 'pochi' %}">
-                            <i class="glyphicon glyphicon-usd"></i>
-                            <h3>MARKET & FINANCE NEWS</h3>
-                            <p>Get the latest insights on the market and economy</p>
-                        </a>
-                    </div>
-                    <div class="col-sm-4">
-                        <a href="{% url 'site' 'contact' %}">
-                            <i class="glyphicon glyphicon-flag"></i>
-                            <h3>ONLINE SUPPORT</h3>
-                            <p>Invest in yourself, invest in your future!</p>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
+{#        <section class="info-bar info-bar-clean">#}
+{#            <div class="container">#}
+{#                <div class="row">#}
+{#                    <div class="col-sm-4">#}
+{#                        <a href="{% url 'pochi' %}">#}
+{#                            <i class="glyphicon glyphicon-credit-card"></i>#}
+{#                            <h3>POCHI </h3>#}
+{#                            <p>Smart investment <b>wallet</b></p>#}
+{#                        </a>#}
+{#                    </div>#}
+{#                    <div class="col-sm-4">#}
+{#                        <a href="{% url 'pochi' %}">#}
+{#                            <i class="glyphicon glyphicon-usd"></i>#}
+{#                            <h3>MARKET & FINANCE NEWS</h3>#}
+{#                            <p>Get the latest insights on the market and economy</p>#}
+{#                        </a>#}
+{#                    </div>#}
+{#                    <div class="col-sm-4">#}
+{#                        <a href="{% url 'site' 'contact' %}">#}
+{#                            <i class="glyphicon glyphicon-flag"></i>#}
+{#                            <h3>ONLINE SUPPORT</h3>#}
+{#                            <p>Invest in yourself, invest in your future!</p>#}
+{#                        </a>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </section>#}
         <!-- /INFO BAR -->
 
         <!-- WELCOME -->
@@ -596,10 +596,16 @@
                     <div class="col-sm-6">
                         <header class="mb-40">
                             <h1 class="fw-300">Welcome to FIMCO</h1>
-                            <h2 class="fw-300 letter-spacing-1 fs-13"><span>TAKE CONTROL OF YOUR FINANCES</span></h2>
+{#                            <h2 class="fw-600 letter-spacing-1 fs-13"><span><i>"HABA HABA HUJAZA KIBABA..."</i></span></h2>#}
+                            <blockquote>
+                                <p class="fw-300 letter-spacing-1 fs-16"><i>"Little by little, a little becomes a lot"; "Haba haba hujaza kibaba"</i></p>
+                                <cite>Anonymous</cite>
+                            </blockquote>
                         </header>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero quod consequuntur quibusdam, enim expedita sed quia nesciunt incidunt accusamus necessitatibus modi adipisci officia libero accusantium esse hic, obcaecati, ullam, laboriosam!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti vero, animi suscipit id facere officia. Aspernatur, quo, quos nisi dolorum aperiam fugiat deserunt velit rerum laudantium cum magnam.</p>
+                        <p>Financial Investment Management Company dedicated to assisting our clients to invest more transparently, competitively and affordably.</p>
+                        <p>This assistance we offer via relevant information, advisory and execution capabilities is underpinned by the deep understanding of local market dynamics and commitment to our core values of Diligence, Integrity and Innovation in all we do.</p>
+                        <p>We are looking to introduce local and foreign investors to the Tanzanian Financial markets opportunities, and indeed vice versa. We do so leveraging years of experience working with international banks in Tanzanian and a rich track record of engaging with clients and regulators alike.</p>
+                        <p>Whether it’s to buy, sell or hold, whether it’s to invest, disinvest or hold; we work hard to give our clients sufficient confidence to make this decision across various asset classes in our financial markets in a way that creates lasting long term value for them.</p>
                         <hr />
 
                         <!--
