--- a/fimco/fimcosite/static/css/about.css
+++ b/fimco/fimcosite/static/css/about.css
@@ -13,3 +13,70 @@ a .WebProduct-Button, .tp-caption.WebProduct-Button {
 .hide {
   display: none;
 }
+
+.box-flip .box1 {
+  padding: 0;
+  background-color: transparent !important;
+}
+
+.box-flip .box-default h2 {
+  color: white !important;
+}
+
+.box-flip .box2 {
+  background-color: white !important;
+}
+
+.box-flip .btn-lg.btn-translucid {
+  color: #002A54;
+}
+
+.box-flip .btn-lg.btn-translucid:hover {
+  color: white;
+}
+
+.page-header h1, .page-header span {
+  color: white;
+}
+
+/*.card img {*/
+  /*-webkit-box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);*/
+  /*-moz-box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);*/
+  /*box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);*/
+/*}*/
+
+.frame {
+  background-color: #ddc;
+  border-radius: 2px;
+  border: 5vmin solid #eee;
+  border-top-color: #ddd;
+  border-bottom-color: #fff;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25) inset, 0 5px 10px 5px rgba(0, 0, 0, 0.25);
+  box-sizing: border-box;
+  display: inline-block;
+  /*margin: 10vh 10vw;*/
+  /*height: 80vh;*/
+  padding: 6vmin;
+  position: relative;
+  text-align: center;
+}
+.frame:before {
+  border-radius: 2px;
+  bottom: -2vmin;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25) inset;
+  content: "";
+  left: -2vmin;
+  position: absolute;
+  right: -2vmin;
+  top: -2vmin;
+}
+.frame:after {
+  border-radius: 2px;
+  bottom: -2.5vmin;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
+  content: "";
+  left: -2.5vmin;
+  position: absolute;
+  right: -2.5vmin;
+  top: -2.5vmin;
+}
