--- a/fimco/pochi/templates/pochi/create_group.html
+++ b/fimco/pochi/templates/pochi/create_group.html
@@ -46,7 +46,8 @@
                                                     <input type="text"
                                                            class="form-control"
                                                            id="profileGroupName"
-                                                           name="profileGroupName">
+                                                           name="profileGroupName"
+                                                           required>
                                                 </div>
                                             </div>
                                         </fieldset>
@@ -58,7 +59,12 @@
                                             <div class="form-group">
                                                 <label class="col-xs-3 control-label">Member</label>
                                                 <div class="col-xs-5">
-                                                    <input type="text" id="member" class="form-control member" name="option[]" title=""/>
+                                                    <input type="text" id="member" class="form-control member masked"
+                                                           name="option[]"
+                                                           title=""
+                                                           data-format="0999999999"
+                                                           data-placeholder="X"
+                                                           placeholder="Phone number"/>
                                                 </div>
                                                 <div class="col-xs-4">
                                                     <button type="button" class="btn btn-default addButton"><i class="fa fa-plus"></i></button>
@@ -68,7 +74,12 @@
                                             <!-- The option field template containing an option field and a Remove button -->
                                             <div class="form-group hide" id="optionTemplate">
                                                 <div class="col-xs-offset-3 col-xs-5">
-                                                    <input class="form-control" type="text" name="option[]" title=""/>
+                                                    <input class="form-control masked"
+                                                           name="option[]"
+                                                           title=""
+                                                           data-format="0999999999"
+                                                           data-placeholder="X"
+                                                           placeholder="Phone number"/>
                                                 </div>
                                                 <div class="col-xs-4">
                                                     <button type="button" class="btn btn-default removeButton"><i class="fa fa-minus"></i></button>
@@ -97,26 +108,6 @@
                                         </fieldset>
 
                                         <hr />
-
-{#                                        <h4>About</h4>#}
-{#                                        <fieldset>#}
-{#                                            <div class="form-group">#}
-{#                                                <label class="col-md-3 control-label" for="groupPurpose">Purpose Info</label>#}
-{#                                                <div class="col-md-8">#}
-{#                                                    <textarea class="form-control" rows="3" id="groupPurpose" name="groupPurpose"></textarea>#}
-{#                                                </div>#}
-{#                                            </div>#}
-{#                                            <div class="form-group">#}
-{#                                                <div class="sky-form">#}
-{#                                                    <label class="col-xs-3 control-label">Group Image <small>(Optional)</small></label>#}
-{#                                                    <div class="col-md-8">#}
-{#                                                        <label for="file" class="input input-file">#}
-{#                                                            <input type="file" id="file" name="image">#}
-{#                                                        </label>#}
-{#                                                    </div>#}
-{#                                                </div>#}
-{#                                            </div>#}
-{#                                        </fieldset>#}
 
                                         <div class="row">
                                             <div class="col-md-9 col-md-offset-3">
